[package]
name = "filament-usage-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
progressing = "3.0.2"
prettytable-rs = "^0.8"
tide = "0.16.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
openssl = { version = "0.10.35", features = ["vendored"] }